--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
         <h1 class="h11" style="text-align: center; padding-bottom: 15px;">3 in 1 Workshop Series</h1>
 
         <div class="div1">
-            <img class="img0" src="/3in1.jpg" alt="photo">
+            <img class="img0" src="3in1.jpg" alt="photo">
         </div>
 
         <h1 id="h22">Workshop Tracks</h1>
         <div class="div2">
             <div class="subdiv">
-                <img class="img1" src="/python101.jpg" alt="photo">
+                <img class="img1" src="python101.jpg" alt="photo">
                 <p class="p">2-day Python Basics</p>
                 <a href="https://bit.ly/pythonx101">Register Now</a>
             </div>
 
             <div class="subdiv">
-                <img class="img1" src="/web101.jpg" alt="photo">
+                <img class="img1" src="web101.jpg" alt="photo">
                 <p class="p" >3-day Web Development Basics</p>
                 <a href="https://bit.ly/webx101">Register Now</a>
             </div>
 
             <div class="subdiv">
-                <img class="img1" src="/flutter101.jpg" alt="photo">
+                <img class="img1" src="flutter101.jpg" alt="photo">
                 <p class="p" >3-day Flutter Basics</p>
                 <a href="https://bit.ly/flutterx101">Register Now</a>
             </div>
